# Canonym

./: .gitignore  LICENSE  README.md  README.rst  SECURITY.md  canonym_demo.ipynb  pyproject.toml
src/canonym/: __init__.py  canonym.py  ner_tagger.py  tag_anonymizer.py  text_item.py
src/canonym/anonymizers/: __init__.py  custom_operators.py
src/canonym/config/: CA_Street_types.csv  anonymizer_config_default.yaml  countries_full.txt  countries_short.txt  ner_config_default.yaml
src/canonym/enhancers/: __init__.py  contiguous_entities_enhancer.py  date_time_day_suffix_enhancer.py  date_time_min_digits_enhancer.py  date_time_month_enhancer.py  result_enhancer.py  word_extender_enhancer.py
src/canonym/recognizers/: __init__.py  advanced_date_recognizer.py  advanced_url_recognizer.py  alphanumeric_id_recognizer.py  ca_passport_recognizer.py  ca_post_code_recognizer.py  ca_provinces_recognizer.py  ca_sin_recognizer.py  ca_street_type.py  ca_uci_recognizer.py  countries_recognizer.py  custom_regex_recognizer.py  entity_type_postprocessing_recognizer.py  full_address_recognizer.py  gender_recognizer.py  number_recognizer.py  title_recognizer.py  transformer_recognizers.py
