[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canonym"
version = "2024.12.03"
description = "Canonym :  A Statistics Canada anonymization package"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["anonymization", "private information", "redacting", "StatCan", "Statistics Canada"]
authors = [
  {email = "alexandre.istrate@statcan.gc.ca", name = "Alexandre Istrate"},
  {email = "Sayema.Mashhadi@statcan.gc.ca", name = "Sayema Mashhadi"}
]
maintainers = [
  {email = "alexandre.istrate@statcan.gc.ca", name = "Alexandre Istrate"},
  {email = "Sayema.Mashhadi@statcan.gc.ca", name = "Sayema Mashhadi"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "confuse==2.0.1",
  "spacy==3.4.0", 
  "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.4.0/en_core_web_lg-3.4.0-py3-none-any.whl", # Spacy English model
  "faker==33.1.0",
  "fr-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.4.0/fr_core_news_lg-3.4.0-py3-none-any.whl", # Spacy French model
  "importlib_resources==6.4.5",
  "lingua-language-detector<2.0.0",
  "pandas==2.1.3",
  "presidio-analyzer==2.2.29",
  "presidio-anonymizer==2.2.29",
  "protobuf==3.20.3",
  "tqdm==4.66.1",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
  "transformers[sentencepiece]==4.46.3"
]

[tool.setuptools]
# ...
include-package-data = true

[tool.setuptools.packages.find]
where = ["src", "src/config"]
namespaces = true

[tool.setuptools.package-data]
canonym = ["config/*.yaml", "config/*.txt", "config/*.csv"]

[project.urls]
homepage = "https://github.com/StatCan/Canonym"
documentation = "https://github.com/StatCan/Canonym/blob/main/README.md"
repository = "https://github.com/StatCan/Canonym.git"

